// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GET /api/models/:model/actions should return a 200 http response for cars 1`] = `
Object {
  "list": Array [
    Object {
      "code": "delete",
      "label": "Delete selected",
    },
  ],
}
`;

exports[`Testing GET /api/models/:model/actions should return a 200 http response for cars-bulk 1`] = `
Object {
  "list": Array [
    Object {
      "code": "delete",
      "label": "Delete selected",
    },
  ],
}
`;

exports[`Testing GET /api/models/:model/actions should return a 200 http response for cars-item 1`] = `
Object {
  "list": Array [
    Object {
      "code": "block_car",
      "label": "Block the car",
      "passFilter": true,
      "target": Array [
        "item",
      ],
    },
    Object {
      "type": "separator",
    },
    Object {
      "code": "delete",
      "label": "Delete",
    },
  ],
}
`;

exports[`Testing GET /api/models/:model/actions should return a 200 http response for users 1`] = `
Object {
  "list": Array [
    Object {
      "code": "delete",
      "label": "Delete",
    },
  ],
}
`;
